<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/browser_menu_desktop"
        android:checkable="true"
        android:title="@string/browser_desktop_site" />
    <item
        android:id="@+id/browser_menu_new_tab"
        android:title="@string/browser_new_tab" />
    <item
        android:id="@+id/browser_menu_history"
        android:title="@string/browser_history" />
    <item
        android:id="@+id/browser_menu_saved_sessions"
        android:title="@string/browser_saved_sessions" />
    <item
        android:id="@+id/browser_menu_save_session"
        android:title="@string/browser_save_session" />
    <item
        android:id="@+id/browser_menu_open_private"
        android:title="@string/browser_open_private" />
    <item
        android:id="@+id/browser_menu_share"
        android:title="@string/browser_share" />
    <item
        android:id="@+id/browser_menu_external"
        android:title="@string/browser_open_external" />
</menu>
